@@ -30,7 +30,7 @@
 
 
 StepCommand::StepCommand()
-	: Command("step", "")
+	: Command("step", "[nsteps]")
 {
 }
 
@@ -42,7 +42,27 @@ StepCommand::~StepCommand()
 
 bool StepCommand::Execute(GXemul& gxemul, const vector<string>& arguments)
 {
+	int64_t nsteps = 1;
+
+	if (arguments.size() > 1) {
+		gxemul.GetUI()->ShowDebugMessage("step: Too many arguments.\n");
+		return false;
+	}
+
+	if (arguments.size() > 0) {
+		stringstream ss;
+		ss << arguments[0];
+		ss >> nsteps;
+	}
+
+	if (nsteps < 1) {
+		gxemul.GetUI()->ShowDebugMessage("nr of steps must be at least 1\n");
+		return false;
+	}
+
 	gxemul.SetRunState(GXemul::SingleStepping);
+	gxemul.SetNrOfSingleStepsInARow(nsteps);
+
 	return true;
 }
 
@@ -80,9 +100,62 @@ static void Test_StepCommand_Affect_RunState()
 	    gxemul.GetRunState() == GXemul::SingleStepping);
 }
 
+static void Test_StepCommand_GoodArgs()
+{
+	refcount_ptr<Command> cmd = new StepCommand;
+	vector<string> arguments;
+	
+	GXemul gxemul;
+	arguments.push_back("42");
+
+	UnitTest::Assert("should have succeeded; good arguments",
+	    cmd->Execute(gxemul, arguments));
+}
+
+static void Test_StepCommand_BadArgs_TooMany()
+{
+	refcount_ptr<Command> cmd = new StepCommand;
+	vector<string> arguments;
+	
+	GXemul gxemul;
+	arguments.push_back("42");
+	arguments.push_back("43");
+
+	UnitTest::Assert("should not have succeeded; noo many args",
+	    !cmd->Execute(gxemul, arguments));
+}
+
+static void Test_StepCommand_BadArgs_Zero()
+{
+	refcount_ptr<Command> cmd = new StepCommand;
+	vector<string> arguments;
+	
+	GXemul gxemul;
+	arguments.push_back("0");
+
+	UnitTest::Assert("should not have succeeded; too few steps",
+	    !cmd->Execute(gxemul, arguments));
+}
+
+static void Test_StepCommand_BadArgs_Negative()
+{
+	refcount_ptr<Command> cmd = new StepCommand;
+	vector<string> arguments;
+	
+	GXemul gxemul;
+	arguments.push_back("-42");
+
+	UnitTest::Assert("should not have succeeded; negative nr of steps",
+	    !cmd->Execute(gxemul, arguments));
+}
+
 UNITTESTS(StepCommand)
 {
 	UNITTEST(Test_StepCommand_Affect_RunState);
+	UNITTEST(Test_StepCommand_GoodArgs);
+	UNITTEST(Test_StepCommand_BadArgs_TooMany);
+	UNITTEST(Test_StepCommand_BadArgs_Zero);
+	UNITTEST(Test_StepCommand_BadArgs_Negative);
 }
 
 #endif
